# todo-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/todo/: agent.py  cli.py  config.py  llm.py  main.py  memory.py  tools.py
